<resources>
    <string name="app_name">SSK WB55</string>
    <string name="title">SSK WB55</string>
    <string name="scan_button">Scan for BLE devices</string>
    <string name="mqtt_switch">Mqtt Proxy</string>
    <string name="signout_button">Sign Out</string>

    <string name="device_name">Device name</string>
    <string name="device_mac">Device MAC</string>
    <string name="device_mtu">MTU:  </string>
    <string name="set_mtu_menu_text">Set MTU</string>
    <string name="wifi_provisioning_menu_text">WiFi Provisioning</string>
    <string name="mqtt_proxy_menu_text">MQTT Proxy</string>
    <string name="menu">More...</string>

    <string name="ssid_name">SSID</string>
    <string name="rssi_value">RSSI: %1$d</string>
    <string name="bssid">BSSID</string>
    <string name="authentication_successess">Mututal Authentication Success</string>
    <string name="authentication_start">Mutual Authentication Start</string>

    <string name="wifi_credential_dialog_title">Save WiFi network</string>
    <string name="password_hint">Password</string>
    <string name="authentication_fail1">Mutual Authentication Fail.(Error : %1$d)</string>
    <string name="authentication_fail">Mutual Authentication Fail.</string>

    <string name="location_not_enabled">Enable location service.</string>
    <string name="open_location">Enable</string>
    <string name="enable_location_warning">Android requires that location services be enabled to scan for ble devices.Please enable location service to continue.</string>
    <string name="cancel">Cancel</string>
</resources>
